# lido-assistant

./: .dockerignore  .env.sample  Dockerfile  README.md  agent_test.py  console_reader.py  discord_reader.py  load_dotenv.py  main.py  pyproject.toml
src/: callback_managers.py  chat_agent.py  chat_chain.py  chat_model.py  database.py  lido_agent.py  loaders.py  prompts.py
src/agent/: multi_action_agent.py  output.py  prompts.py  tools.py
